# command_line_chatgpt

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: api_tests.rs
